Added Processors and Routes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+spring.profiles.active=${ACTIVE_PROFILE}
+logging.level.root=INFO
 
+camel.springboot.name=sqs-test
+camel.springboot.main-run-controller=true
+
+app.queueUrl=
+app.region=
+app.key=
+app.secret=
